Make CORS and WebSocket allowed origins configurable via ALLOWED_ORIGINS env var
Previously hardcoded to localhost:3000 in SecurityConfig and
WebSocketConfig, which would break the deployed frontend once it's
not running locally. Defaults to localhost:3000 when unset, so local
dev is unaffected.